test/Fail/Issue998d.err
Issue998d.agda:7.9-10: error: [UnequalTypes]
The types
  Set ℓ
and
  Set Issue998d.ℓ
are not equal
when checking that the expression A has type Set ℓ
